swagger parameter test
